--- a/Algoritms-Lab3/Queue2ListWindow.xaml
+++ b/Algoritms-Lab3/Queue2ListWindow.xaml
@@ -20,6 +20,7 @@
         <Button Content="Добавить" Click="Add_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,40,0,0" />
         <Button Content="Удалить" Click="Remove_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,80,0,0" />
         <Button Content="Просмотр первого" Click="Peek_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,120,0,0" />
+        <Button Content="Пустой?" Click="isEmpty_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,120,0,0" />
         <Button Content="Печать" Click="Print_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,160,0,0" />
         
         <TextBox Grid.Column="1"  x:Name="Output" VerticalAlignment="Top" IsReadOnly="True" Height="350" Width="600" Margin="5" TextWrapping="Wrap" />
