--- a/Algoritms-Lab3/Queue2Window.xaml
+++ b/Algoritms-Lab3/Queue2Window.xaml
@@ -22,6 +22,7 @@
         <Button Content="Добавить" Click="Add_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,50,0,0" />
         <Button Content="Удалить" Click="Remove_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,90,0,0" />
         <Button Content="Первый" Click="Peek_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,130,0,0" />
+        <Button Content="Пустой?" Click="isEmpty_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,130,0,0" />
         <Button Content="Печать" Click="Print_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,170,0,0" />
 
         <TextBox x:Name="Output" Grid.Column="1" VerticalAlignment="Top"  TextWrapping="Wrap" IsReadOnly="True" Height="350" Width="600" Margin="5"/>
