--- a/Algoritms-Lab3/Queue2ListWindow.xaml
+++ b/Algoritms-Lab3/Queue2ListWindow.xaml
@@ -15,15 +15,27 @@
             <ColumnDefinition Width="*" />
             <!-- Столбец для вывода результата -->
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
         
-        <TextBox x:Name="InputValue" Width="100" Height="30" VerticalAlignment="Top" />
-        <Button Content="Добавить" Click="Add_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,40,0,0" />
-        <Button Content="Удалить" Click="Remove_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,80,0,0" />
-        <Button Content="Просмотр первого" Click="Peek_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,120,0,0" />
-        <Button Content="Пустой?" Click="isEmpty_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,120,0,0" />
-        <Button Content="Печать" Click="Print_Click" Width="100" Height="30" VerticalAlignment="Top" Margin="0,160,0,0" />
-        
-        <TextBox Grid.Column="1"  x:Name="Output" VerticalAlignment="Top" IsReadOnly="True" Height="350" Width="600" Margin="5" TextWrapping="Wrap" />
+        <TextBox x:Name="InputValue" Width="100" Height="30" VerticalAlignment="Top" Margin="0,10,0,0" />
+
+        <!-- Кнопки для управления очередью -->
+        <Button Grid.Row="1" Grid.Column="0" Content="Добавить" Click="Add_Click" Width="100" Height="30" VerticalAlignment="Top" />
+        <Button Grid.Row="2" Grid.Column="0" Content="Удалить" Click="Remove_Click" Width="100" Height="30" VerticalAlignment="Top" />
+        <Button Grid.Row="3" Grid.Column="0" Content="Первый" Click="Peek_Click" Width="100" Height="30" VerticalAlignment="Top"  />
+        <Button Grid.Row="4" Grid.Column="0" Content="Пустой?" Click="isEmpty_Click" Width="100" Height="30" VerticalAlignment="Top"  />
+        <Button Grid.Row="5" Grid.Column="0" Content="Печать" Click="Print_Click" Width="100" Height="30" VerticalAlignment="Top" />
+        <Button Grid.Row="6" Grid.Column="0" Content="Файл" Click="LoadFileButton_Click" Width="100" Height="30" VerticalAlignment="Top" />
+
+        <TextBox x:Name="Output" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" VerticalAlignment="Top"  TextWrapping="Wrap" IsReadOnly="True" Height="350" Width="600" Margin="5"/>
 
     </Grid>
 </Window>
